--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 html, body {
     margin: 0;
     padding: 0;
+    background-image: url(img/table.png);
+}
+
+button {
+    background-color: #fff100;
+    cursor: pointer;
 }
