--- a/style.css
+++ b/style.css
@@ -1,10 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap');
+
 html, body {
     margin: 0;
     padding: 0;
     background-image: url(img/table.png);
+    font-family: "Exo 2", sans-serif;
+    height: 100vh;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 button {
     background-color: #fff100;
     cursor: pointer;
+    border: none;
+
+}
+
+button.draw {
+    font-size: 1.2em;
 }
