--- a/style.css
+++ b/style.css
@@ -30,3 +30,19 @@ button.draw {
     font-size: 1.2em;
     padding: 5px;
 }
+
+div.card-slot {
+    border: 1px solid black;
+    border-radius: 5px;
+    height: 120px;
+    width: calc(120px * 5 / 7);
+}
+
+div.card-slot:nth-of-type(1) {
+    margin-bottom: 50px;
+}
+
+img.card {
+    width: 100%;
+    height: 100%;
+}
