--- a/style.css
+++ b/style.css
@@ -46,3 +46,13 @@ img.card {
     width: 100%;
     height: 100%;
 }
+
+div.top {
+    display: flex;
+    align-self: flex-start;
+}
+
+div.top > p {
+    margin: 0;
+    margin-left: 10px;
+}
